--- a/style.css
+++ b/style.css
@@ -1,10 +1,38 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 h1{
     font-size: 40px;
 }
-#skip{
-    color: blueviolet;
-    font-size: 60px;
+.skip{
+    color:orchid;
+    font-size: 70px;
+}
+p{
+    font-size: 20px;
+}
+section{
+    display:flex;
+}
+.half-width{
+    width: 50%;
+    padding-left: 5%;
+    
+}
+.half-width img{
+    width: 600px;
+    padding-right:10%;
+}
+.link-button{
+    text-decoration: none;
+    border-radius:50px;
+    padding: 10px 30px;
+    background-image:linear-gradient(yellow, red);
+    color: white;
+    font-weight: 700;
+}
+.background{
+    background-color: aquamarine;
+    
 }
