--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ section{
     font-weight: 700;
 }
 .background{
-    background-color: aquamarine;
-    
+    background-color: aquamarine;    
+}
+.second-background{
+    background-image:url(images/shapes/7.png) ;
 }
