--- a/style.css
+++ b/style.css
@@ -59,10 +59,13 @@ color: rgb(7, 30, 238);
 }
 .one-line{
     display:flex;
-    width:10%;
+    width: 10%;
     text-align:center;
     padding-left:70px;
-    padding-bottom: 80px;   
+    padding-bottom: 80px;
+}
+section.second-background {
+    padding: 100px 0;
 }
 .one-line img{
     width:350px;
